[gd_scene load_steps=10 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://heart_full.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "start_game"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="GDScript" id=6]
script/source = "extends HBoxContainer

var heart_full = preload(\"heart_full.png\")
var heart_empty = preload(\"heart_empty.png\")

func update_health(health):
	for i in get_child_count():
		if health > i:
			get_child(i).texture = heart_full
		else:
			get_child(i).texture = heart_empty
"

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Dodge The Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -149.0
margin_bottom = -71.0
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HeartContainer" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 151.0
margin_bottom = 41.0
rect_scale = Vector2( 4, 4 )
custom_constants/separation = 3
script = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H1" type="TextureRect" parent="HeartContainer"]
margin_right = 15.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="H2" type="TextureRect" parent="HeartContainer"]
margin_left = 18.0
margin_right = 33.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="H3" type="TextureRect" parent="HeartContainer"]
margin_left = 36.0
margin_right = 51.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
